--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,12 @@ edition = "2021"
 leptos = { version = "0.8.2", features = ["csr"] }
 trunk = "0.21.14"
 web-sys = "0.3.77"
+
+
+[dependencies.uuid]
+version = "1.17.0"
+
+features = [
+    "v4",
+]
+
